Ignore debug files

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ ChampionshipManager/.idea/
 ChampionshipManager/ChampionshipManager.Web/bin/
 
 ChampionshipManager/ChampionshipManager.Web/obj/
+
+ChampionshipManager/ChampionshipManager.Db/obj/
