Gitignore debug and build files

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ ChampionshipManager/ChampionshipManager.Web/bin/
 ChampionshipManager/ChampionshipManager.Web/obj/
 
 ChampionshipManager/ChampionshipManager.Db/obj/
+
+ChampionshipManager/ChampionshipManager.BusinessLayer/bin/
+
+ChampionshipManager/ChampionshipManager.BusinessLayer/obj/
