Gitignore debug and build files

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ ChampionshipManager/ChampionshipManager.Db/obj/
 ChampionshipManager/ChampionshipManager.BusinessLayer/bin/
 
 ChampionshipManager/ChampionshipManager.BusinessLayer/obj/
+
+ChampionshipManager/ChampionshipManager.Db/bin/
