--- a/ChampionshipManager/ChampionshipManager.Web/ChampionshipManager.Web.csproj
+++ b/ChampionshipManager/ChampionshipManager.Web/ChampionshipManager.Web.csproj
@@ -42,6 +42,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\ChampionshipManager.BusinessLayer\ChampionshipManager.BusinessLayer.csproj" />
       <ProjectReference Include="..\ChampionshipManager.Db\ChampionshipManager.Db.csproj" />
     </ItemGroup>
 
