--- a/ChampionshipManager/ChampionshipManager.Db/ChampionshipManager.Db.csproj
+++ b/ChampionshipManager/ChampionshipManager.Db/ChampionshipManager.Db.csproj
@@ -6,7 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.6" />
     </ItemGroup>
 
 </Project>
