--- a/ChampionshipManager/ChampionshipManager.Web/ChampionshipManager.Web.csproj
+++ b/ChampionshipManager/ChampionshipManager.Web/ChampionshipManager.Web.csproj
@@ -60,6 +60,12 @@
       <Content Update="Pages\Components\CreateOrganizerIfNotCreated.razor">
         <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       </Content>
+      <Content Update="Pages\Components\EditTeam.razor">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      </Content>
+      <Content Update="Pages\Components\EditSkill.razor">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
