--- a/ChampionshipManager/ChampionshipManager.Web/ChampionshipManager.Web.csproj
+++ b/ChampionshipManager/ChampionshipManager.Web/ChampionshipManager.Web.csproj
@@ -33,7 +33,7 @@
       <Content Update="Pages\Tournaments\CreateTournament.razor">
         <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       </Content>
-      <Content Update="Pages\Tournaments\ShowTournament.razor">
+      <Content Update="Pages\Tournaments\EditTournament.razor">
         <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       </Content>
       <Content Update="Pages\Skills\CreateSkill.razor">
@@ -70,6 +70,12 @@
         <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       </Content>
       <Content Update="Pages\Championships\EditChampionship.razor">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      </Content>
+      <Content Update="Pages\Tournaments\ShowTournament.razor">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      </Content>
+      <Content Update="Pages\Tournaments\EditGame.razor">
         <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       </Content>
     </ItemGroup>
