--- a/ChampionshipManager/ChampionshipManager.Web/ChampionshipManager.Web.csproj
+++ b/ChampionshipManager/ChampionshipManager.Web/ChampionshipManager.Web.csproj
@@ -78,6 +78,12 @@
       <Content Update="Pages\Tournaments\EditGame.razor">
         <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       </Content>
+      <Content Update="Pages\Tournaments\ShowTournamentSpider.razor">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      </Content>
+      <Content Update="Pages\Tournaments\ShowTournamentAgaintsEverybody.razor">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
