--- a/ChampionshipManager/ChampionshipManager.Db/ChampionshipManager.Db.csproj
+++ b/ChampionshipManager/ChampionshipManager.Db/ChampionshipManager.Db.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.6" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Config" />
+    </ItemGroup>
+
 </Project>
